@startuml ER_awards_db

skinparam linetype ortho
skinparam nodesep 70
skinparam ranksep 90
skinparam defaultFontName Arial
skinparam defaultFontSize 12

skinparam entity {
  BackgroundColor #FAFAFA
  BorderColor #555555
  FontColor #222222
  HeaderBackgroundColor #4A90D9
  HeaderFontColor #FFFFFF
  HeaderFontStyle bold
}

skinparam note {
  BackgroundColor #FFFDE7
  BorderColor #F9A825
}

' ─────────────────────────────────────────
' ENUMS (справочники)
' ─────────────────────────────────────────

entity "<<enum>>\nawardtype" as awardtype {
  MEDAL | PPZ
  DISTINCTION | DECORATION
}

entity "<<enum>>\napprovaltype" as approvaltype {
  NK | HERALDISTS
  RELATIVES | SPONSORS
}

entity "<<enum>>\napprovalstatus" as approvalstatus #LightYellow {
  pending | approved
  rejected | revision
}

entity "<<enum>>\ncomponenttype" as componenttype {
  MEDAL | BADGE | CUFFLINKS
  PENDANT | PPZ | BOX
  CERTIFICATE | CASE
}

entity "<<enum>>\nproductionstatus" as productionstatus #LightYellow {
  planned | ordered
  in_production | delivered | cancelled
}

entity "<<enum>>\ndevelopmentstatus" as developmentstatus #LightYellow {
  planned | in_progress
  review | completed | cancelled
}

entity "<<enum>>\nlaureatecategory" as laureatecategory {
  EMPLOYEE | VETERAN
  UNIVERSITY | NII
  NONPROFIT | COMMERCIAL
}

entity "<<enum>>\nlaureateawardstatus" as laureateawardstatus #LightYellow {
  nominated | approved
  rejected | awarded | cancelled
}

entity "<<enum>>\nbulletintype" as bulletintype {
  MEDAL | PPZ
}

entity "<<enum>>\nbulletinstatus" as bulletinstatus {
  DRAFT | ACTIVE | CLOSED
}

entity "<<enum>>\nprotocolstatus" as protocolstatus {
  DRAFT | SIGNED
}

entity "<<enum>>\nsigningrole" as signingrole {
  SIGNER | AUTHORIZED
}

entity "<<enum>>\nvotevalue" as votevalue {
  FOR | AGAINST
}

' ─────────────────────────────────────────
' НАГРАДЫ
' ─────────────────────────────────────────

entity "awards" {
  * id : integer <<PK>>
  --
  * name : varchar(500)
  * award_type : awardtype
  description : text
  image_front : bytea
  image_back : bytea
  created_at : timestamptz
}

note right of awards
  image_front / image_back —
  бинарные данные, MIME
  определяется по сигнатуре.
  Для больших БД рассмотреть
  вынос в файловое хранилище.
end note

entity "award_characteristics" {
  * id : integer <<PK>>
  --
  * award_id : integer <<FK>>
  * field_name : text
  field_value : text
}

note right of award_characteristics
  EAV-паттерн: поля из Access
  (НаградыМега). Оправдан
  для зеркала произвольных
  атрибутов импорта.
end note

entity "award_establishments" {
  * id : integer <<PK>>
  --
  * award_id : integer <<FK, UQ>>
  establishment_date : date
  document_number : varchar(100)
  document_date : date
  initiator : varchar(500)
  details : text
}

entity "award_developments" {
  * id : integer <<PK>>
  --
  * award_id : integer <<FK, UQ>>
  developer : varchar(500)
  start_date : date
  end_date : date
  status : varchar(100)
  status_enum : developmentstatus
  details : text
}

entity "award_approvals" {
  * id : integer <<PK>>
  --
  * award_id : integer <<FK>>
  * approval_type : approvaltype
  approver_name : varchar(500)
  status : varchar(100)
  status_enum : approvalstatus
  date : date
  details : text
}

entity "award_productions" {
  * id : integer <<PK>>
  --
  * award_id : integer <<FK>>
  * component_type : componenttype
  supplier : varchar(500)
  quantity : integer
  unit_price : double precision
  order_date : date
  delivery_date : date
  status : varchar(100)
  status_enum : productionstatus
  details : text
}

entity "inventory_items" {
  * id : integer <<PK>>
  --
  * award_id : integer <<FK>>
  * component_type : componenttype
  total_count : integer
  reserve_count : integer
  issued_count : integer
  available_count : integer <<computed>>
  details : text
  updated_at : timestamptz
}

note right of inventory_items
  **available_count вычислимо:**
  = total − reserve − issued
  Контролируется CHECK-constraint.
  Кандидат на GENERATED COLUMN.
end note

' ─────────────────────────────────────────
' ЛАУРЕАТЫ
' ─────────────────────────────────────────

entity "laureates" {
  * id : integer <<PK>>
  --
  * full_name : varchar(500)
  category : laureatecategory
  position : varchar(500)
  organization : varchar(500)
  phone : varchar(100)
  email : varchar(255)
  address : text
  notes : text
  created_at : timestamptz
}

entity "laureate_awards" {
  * id : integer <<PK>>
  --
  * laureate_id : integer <<FK>>
  * award_id : integer <<FK>>
  assigned_date : date
  initiator : varchar(500)
  status : varchar(100)
  status_enum : laureateawardstatus
}

note right of laureate_awards
  bulletin_number удалён —
  дублировал voting_bulletin_number
  в laureate_lifecycles.
  Единственный источник правды
  → lifecycle.
end note

entity "laureate_lifecycles" {
  * id : integer <<PK>>
  --
  * laureate_award_id : integer <<FK, UQ>>
  ..Этап 1 — Номинирование..
  nomination_date : date
  nomination_initiator : varchar(500)
  nomination_done : boolean
  ..Этап 2 — Голосование..
  voting_date : date
  voting_bulletin_number : varchar(50)
  voting_done : boolean
  ..Этап 3 — Решение..
  decision_date : date
  decision_protocol_number : varchar(50)
  decision_done : boolean
  ..Этап 4 — Регистрация..
  registration_date : date
  registration_signer_id : integer <<FK>>
  registration_certificate_number : varchar(100)
  registration_done : boolean
  ..Этап 5 — Вручение..
  ceremony_date : date
  ceremony_place : varchar(500)
  ceremony_done : boolean
  ..Этап 6 — Публикация..
  publication_date : date
  publication_source : varchar(500)
  publication_done : boolean
  ..Склад..
  inventory_reserved : boolean
  inventory_issued : boolean
  ..Согласие ПД..
  consent_sent_date : date
  consent_received_date : date
  consent_received : boolean
}

note right of laureate_lifecycles
  Плоская структура (20+ колонок).
  Потенциал нормализации:
  таблица lifecycle_stage_entries
  (laureate_award_id, stage, done, date).
  Текущая структура оправдана
  простотой запросов и отчётов ТЗ.
end note

entity "laureate_consent_files" {
  * id : integer <<PK>>
  --
  * laureate_award_id : integer <<FK, UQ>>
  * filename : varchar(500)
  content_type : varchar(200)
  * data : bytea
  uploaded_at : timestamptz
}

' ─────────────────────────────────────────
' НАГРАДНОЙ КОМИТЕТ
' ─────────────────────────────────────────

entity "committee_members" {
  * id : integer <<PK>>
  --
  * full_name : varchar(500)
  position : varchar(500)
  organization : varchar(500)
  phone : varchar(100)
  email : varchar(255)
  is_active : boolean
  notes : text
  created_at : timestamptz
}

entity "member_signing_rights" {
  * id : integer <<PK>>
  --
  * member_id : integer <<FK>>
  * award_id : integer <<FK>>
  * role : signingrole
  assigned_date : date
  <<UNIQUE (member_id, award_id)>>
}

' ─────────────────────────────────────────
' ГОЛОСОВАНИЕ
' ─────────────────────────────────────────

entity "bulletins" {
  * id : integer <<PK>>
  --
  * number : varchar(50) <<UQ>>
  * bulletin_type : bulletintype
  voting_start : date
  voting_end : date
  postal_address : text
  status : bulletinstatus
  created_at : timestamptz
}

entity "bulletin_sections" {
  * id : integer <<PK>>
  --
  * bulletin_id : integer <<FK>>
  * section_name : varchar(500)
  section_order : integer
}

entity "bulletin_questions" {
  * id : integer <<PK>>
  --
  * section_id : integer <<FK>>
  * question_text : text
  question_order : integer
  laureate_award_id : integer <<FK, NULL>>
  initiator : varchar(500)
}

entity "bulletin_distributions" {
  * id : integer <<PK>>
  --
  * bulletin_id : integer <<FK>>
  * member_id : integer <<FK>>
  sent : boolean
  sent_date : date
  received : boolean
  received_date : date
  <<UNIQUE (bulletin_id, member_id)>>
}

entity "votes" {
  * id : integer <<PK>>
  --
  * question_id : integer <<FK>>
  * member_id : integer <<FK>>
  value : votevalue
  voted_at : timestamptz
  <<UNIQUE (question_id, member_id)>>
}

entity "protocols" {
  * id : integer <<PK>>
  --
  * bulletin_id : integer <<FK, UQ>>
  * number : varchar(50)
  date : date
  status : protocolstatus
  details : text
  created_at : timestamptz
}

entity "protocol_extracts" {
  * id : integer <<PK>>
  --
  * protocol_id : integer <<FK>>
  * laureate_award_id : integer <<FK>>
  extract_date : date
  details : text
}

entity "ppz_submissions" {
  * id : integer <<PK>>
  --
  * laureate_award_id : integer <<FK>>
  * authorized_member_id : integer <<FK>>
  submission_number : varchar(50)
  date : date
  details : text
}

' ─────────────────────────────────────────
' ЗЕРКАЛО ACCESS
' ─────────────────────────────────────────

entity "access_mirror_rows" {
  * id : integer <<PK>>
  --
  * table_name : varchar(512)
  * row_index : integer
  * data : jsonb
  <<UNIQUE (table_name, row_index)>>
}

note right of access_mirror_rows
  Сырое зеркало CSV-выгрузки
  из Access. Служебная таблица,
  не связана с основной схемой.
end note

' ─────────────────────────────────────────
' СВЯЗИ — НАГРАДЫ
' ─────────────────────────────────────────

awards ||--o{ award_characteristics   : "award_id"
awards ||--o| award_establishments    : "award_id"
awards ||--o| award_developments      : "award_id"
awards ||--o{ award_approvals         : "award_id"
awards ||--o{ award_productions       : "award_id"
awards ||--o{ inventory_items         : "award_id"
awards ||--o{ member_signing_rights   : "award_id"

' ─────────────────────────────────────────
' СВЯЗИ — ЛАУРЕАТЫ
' ─────────────────────────────────────────

laureates       ||--o{ laureate_awards        : "laureate_id"
awards          ||--o{ laureate_awards        : "award_id"
laureate_awards ||--o| laureate_lifecycles    : "laureate_award_id"
laureate_awards ||--o| laureate_consent_files : "laureate_award_id"
laureate_awards ||--o{ protocol_extracts      : "laureate_award_id"
laureate_awards ||--o{ ppz_submissions        : "laureate_award_id"
laureate_awards ||--o{ bulletin_questions     : "laureate_award_id"

committee_members ||--o{ laureate_lifecycles  : "registration_signer_id"

' ─────────────────────────────────────────
' СВЯЗИ — НК
' ─────────────────────────────────────────

committee_members ||--o{ member_signing_rights  : "member_id"
committee_members ||--o{ bulletin_distributions : "member_id"
committee_members ||--o{ votes                  : "member_id"
committee_members ||--o{ ppz_submissions        : "authorized_member_id"

' ─────────────────────────────────────────
' СВЯЗИ — ГОЛОСОВАНИЕ
' ─────────────────────────────────────────

bulletins          ||--o{ bulletin_sections      : "bulletin_id"
bulletins          ||--o{ bulletin_distributions : "bulletin_id"
bulletins          ||--o| protocols              : "bulletin_id"
bulletin_sections  ||--o{ bulletin_questions     : "section_id"
bulletin_questions ||--o{ votes                  : "question_id"
protocols          ||--o{ protocol_extracts      : "protocol_id"

' ─────────────────────────────────────────
' СВЯЗИ ENUM → СУЩНОСТИ
' ─────────────────────────────────────────

awards              }o--|| awardtype
award_approvals     }o--|| approvaltype
award_approvals     }o--|| approvalstatus
award_productions   }o--|| componenttype
award_productions   }o--|| productionstatus
award_developments  }o--|| developmentstatus
inventory_items     }o--|| componenttype
laureates           }o--|| laureatecategory
laureate_awards     }o--|| laureateawardstatus
bulletins           }o--|| bulletintype
bulletins           }o--|| bulletinstatus
protocols           }o--|| protocolstatus
member_signing_rights }o--|| signingrole
votes               }o--|| votevalue

@enduml
